--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/YanchWare/FullStack#readme",
   "dependencies": {
+    "babel-relay-plugin": "^0.3.0",
     "graphql": "^0.4.12",
     "graphql-relay": "^0.3.5",
     "jquery": "^2.1.4",
